# rust-polyomino-solver

./: .gitignore  Cargo.toml  README.md  poly.txt  target.txt
data/: b8x8holes.board  b8x8nocorners.board  chinese-puzzle.board  chinese-puzzle.poly  cross.board  heptomino.poly  hexomino.txt  knight.board  octomino.poly  pentomino.poly  tetromino.txt  triomino.txt
point-derive/: Cargo.toml
point-derive/src/: lib.rs
src/: board.rs  lib.rs  main.rs  point.rs  polyomino.rs  solver.rs  utils.rs
src/poly/: board.rs  mod.rs  point.rs  polyomino.rs  polyominoutils.rs  solver.rs  utils.rs
