[package]
name = "polyomino"
version = "0.0.1"
authors = ["amorgan"]

[lib]
name = "polyomino"
path = "src/lib.rs"

[[bin]]
name = "polyrun"
path = "src/main.rs"

[dependencies]
num="*"
byteorder="*"
rand="*"
bit-vec="*"
lazy_static="*"
rustc-hash="1.1.0"
point-derive = { path = "point-derive" }

[profile.release]
debug = true
