[package]
name = "polyomino"
version = "0.0.1"
authors = ["amorgan"]
edition = "2021"

[lib]
name = "polyomino"
path = "src/lib.rs"

[[bin]]
name = "polyrun"
path = "src/main.rs"

[dependencies]
num="*"
byteorder="*"
rand="*"
bit-vec="*"
lazy_static="*"
rustc-hash="*"
point-derive = { path = "point-derive" }

[profile.release]
debug = true
